[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/PNG/Parts/gun00.png" type="Texture" id=1]
[ext_resource path="res://assets/PNG/Parts/turretBase_small.png" type="Texture" id=2]
[ext_resource path="res://Ships/GunTurrets/GunTurret.gd" type="Script" id=3]

[node name="GunTurret" type="Node2D"]
script = ExtResource( 3 )

[node name="TurretBase" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TurretGun" type="Sprite" parent="TurretBase"]
rotation = -1.5708
texture = ExtResource( 1 )
offset = Vector2( 0, 9 )

[node name="CastPoint" type="Position2D" parent="TurretBase/TurretGun"]
position = Vector2( 0, 46 )
